# zy_renderer

./: .gitignore  CMakeLists.txt  README.md
engine/include/app/: my_userdata.hpp
engine/include/core/: camera.hpp  context.hpp  define.hpp  framebuffer.hpp  graphics.hpp  image.hpp  material.hpp  mesh.hpp  model.hpp  perframe.hpp  platform.hpp  scene.hpp  shader.hpp  texture.hpp
engine/include/platform/: win32.hpp
engine/include/shading/blinn/: blinn_material.hpp  blinn_model.hpp  blinn_program.hpp  blinn_scene.hpp  blinn_shader.hpp
engine/include/shading/pbr/: pbr_material.hpp  pbr_model.hpp  pbr_program.hpp  pbr_scene.hpp  pbr_shader.hpp
engine/include/utility/: math_tool.hpp  scene_loader.hpp
engine/src/: main.cpp
engine/src/app/: my_userdata.cpp  my_userdata.hpp
engine/src/blinn/: blinn_material.cpp  blinn_material.hpp  blinn_model.cpp  blinn_model.hpp  blinn_program.hpp  blinn_scene.cpp  blinn_scene.hpp  blinn_shader.cpp  blinn_shader.hpp
engine/src/core/: camera.cpp  camera.hpp  context.cpp  context.hpp  define.hpp  enum.hpp  framebuffer.cpp  framebuffer.hpp  graphics.cpp  graphics.hpp  image.cpp  image.hpp  math_tool.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  perframe.hpp  platform.cpp  platform.hpp  program.hpp  scene.cpp  scene.hpp  shader.hpp  texture.cpp  texture.hpp  userdata.hpp
engine/src/platform/: win32.cpp  win32.hpp
engine/src/shading/blinn/: blinn_material.cpp  blinn_material.hpp  blinn_model.cpp  blinn_model.hpp  blinn_program.cpp  blinn_scene.cpp  blinn_scene.hpp  blinn_shader.cpp  blinn_shader.hpp
engine/src/shading/pbr/: pbr_material.cpp  pbr_material.hpp  pbr_model.cpp  pbr_model.hpp  pbr_program.cpp  pbr_scene.cpp  pbr_shader.cpp
engine/src/utility/: math_tool.hpp  maths.hpp  scene_loader.hpp
src/: camera.cpp  camera.hpp  graphics.cpp  graphics.hpp  image.cpp  image.hpp  main.cpp  mathtool.hpp  platform.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  win32.cpp  win32.hpp  win32_func.cpp  win32_func.hpp
src/blinn/: blinn_material.cpp  blinn_material.hpp  blinn_model.cpp  blinn_model.hpp  blinn_scene.cpp  blinn_scene.hpp  blinn_shader.cpp  blinn_shader.hpp
src/core/: camera.cpp  camera.hpp  framebuffer.cpp  framebuffer.hpp  image.hpp  maths.cpp  maths.hpp  mesh.cpp  mesh.hpp  model.hpp  perframe.hpp  platform.hpp  program.hpp  scene.hpp  shader.hpp  texture.cpp  texture.hpp
src/platform/: win32.cpp  win32.hpp
